Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-1009

Queries should not be failed due to UDFs/UDAs that leak.

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 1.3
    • Impala 1.4
    • None
    • None

    Description

      These should be warnings instead of failing the query.

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            skye Skye Wanderman-Milne
            nong_impala_60e1 Nong Li
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment